# contextgen-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DATABASE_SETUP.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
analytics/: analytics_report_20250722_171354.txt
config/: __init__.py  config.py  logging_config.py  settings.py
config/environments/: development.py  production.py  testing.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.conf
docs/: README.md  installation.md  quickstart.md
docs/database/: README.md
examples/: basic_usage.py  database_usage.py  model_caching_demo.py
scripts/: cache_manager.py  database_analytics.py  database_backup.py  database_health_check.py  download_coco.py  init.sql  migrate_to_database.py  setup_database.py  system_monitor.py
scripts/database/: database_analytics.py  database_backup.py  database_health_check.py  migrate_to_database.py  setup_database.py
scripts/maintenance/: cache_manager.py  system_monitor.py
src/: main.py
src/api/: __init__.py  app.py  routes.py  schemas.py
src/api/middleware/: rate_limiter.py
src/core/: cache.py  exceptions.py  metrics.py  performance.py
src/data_processing/: coco_dataset.py  dataset.py
src/database/: __init__.py  database.py  models.py  session.py
src/database/migrations/: env.py
src/embedding/: database_embedding_manager.py  embedding_manager.py
src/generation/: image_generator.py
src/retrieval/: rag_manager.py
src/utils/: coco_downloader.py  download_dataset.py  error_handler.py  health_check.py  logger.py  model_cache.py  performance_monitor.py  security.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_database_integration.py  test_model_cache.py
tests/integration/: test_api.py  test_database_integration.py
tests/unit/: test_config.py  test_model_cache.py
